--- a/rpc-http/rpc-http-example/pom.xml
+++ b/rpc-http/rpc-http-example/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rpc</artifactId>
+        <artifactId>rpc-http</artifactId>
         <groupId>com.nju</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rpc-client</artifactId>
+    <artifactId>rpc-http-example</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -20,22 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>com.nju</groupId>
-            <artifactId>rpc-protocol</artifactId>
+            <artifactId>rpc-client</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nju</groupId>
-            <artifactId>rpc-codec</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nju</groupId>
-            <artifactId>rpc-transporter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nju</groupId>
-            <artifactId>rpc-common</artifactId>
+            <artifactId>rpc-server</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
