--- a/rpc-netty/rpc-netty-server/pom.xml
+++ b/rpc-netty/rpc-netty-server/pom.xml
@@ -17,4 +17,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.nju</groupId>
+            <artifactId>rpc-netty-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
