--- a/rpc-netty/rpc-netty-example/pom.xml
+++ b/rpc-netty/rpc-netty-example/pom.xml
@@ -9,19 +9,24 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rpc-netty-client</artifactId>
+    <artifactId>rpc-netty-example</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.nju</groupId>
-            <artifactId>rpc-netty-common</artifactId>
+            <artifactId>rpc-netty-server</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.nju</groupId>
+            <artifactId>rpc-netty-client</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
 </project>
