--- a/rpc-netty/pom.xml
+++ b/rpc-netty/pom.xml
@@ -29,6 +29,7 @@
         <lombok.version>1.18.26</lombok.version>
         <slf4j.version>2.0.5</slf4j.version>
         <logback-classic.version>1.3.0</logback-classic.version>
+        <hamcrest-core.version>2.2</hamcrest-core.version>
     </properties>
 
     <dependencyManagement>
@@ -42,6 +43,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>${hamcrest-core.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
