--- a/rpc-netty/pom.xml
+++ b/rpc-netty/pom.xml
@@ -30,6 +30,7 @@
         <slf4j.version>2.0.5</slf4j.version>
         <logback-classic.version>1.3.0</logback-classic.version>
         <hamcrest-core.version>2.2</hamcrest-core.version>
+        <commons-collections4>4.4</commons-collections4>
     </properties>
 
     <dependencyManagement>
@@ -43,6 +44,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4}</version>
+        </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
