--- a/rpc-netty/pom.xml
+++ b/rpc-netty/pom.xml
@@ -31,6 +31,7 @@
         <logback-classic.version>1.3.0</logback-classic.version>
         <hamcrest-core.version>2.2</hamcrest-core.version>
         <commons-collections4>4.4</commons-collections4>
+        <guava.version>30.1.1-jre</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -44,10 +45,16 @@
     </dependencyManagement>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>${commons-collections4}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
