--- a/rpc-netty/rpc-netty-client/pom.xml
+++ b/rpc-netty/rpc-netty-client/pom.xml
@@ -23,5 +23,9 @@
             <artifactId>rpc-netty-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+        </dependency>
     </dependencies>
 </project>
