--- a/rpc-netty/pom.xml
+++ b/rpc-netty/pom.xml
@@ -33,6 +33,10 @@
         <commons-collections4>4.4</commons-collections4>
         <guava.version>30.1.1-jre</guava.version>
         <lz4.version>1.3.0</lz4.version>
+<!--        <spring-boot.version>3.0.6</spring-boot.version>-->
+        <curator-framework.version>4.3.0</curator-framework.version>
+        <curator-recipes.version>4.3.0</curator-recipes.version>
+        <curator-client.version>4.3.0</curator-client.version>
     </properties>
 
     <dependencyManagement>
@@ -86,6 +90,26 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter</artifactId>-->
+<!--            <version>${spring-boot.version}</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>${curator-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>${curator-recipes.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-client</artifactId>
+            <version>${curator-client.version}</version>
         </dependency>
     </dependencies>
 
