--- a/rpc-netty/pom.xml
+++ b/rpc-netty/pom.xml
@@ -33,7 +33,8 @@
         <commons-collections4>4.4</commons-collections4>
         <guava.version>30.1.1-jre</guava.version>
         <lz4.version>1.3.0</lz4.version>
-<!--        <spring-boot.version>3.0.6</spring-boot.version>-->
+        <jackson.version>2.14.0</jackson.version>
+        <!--        <spring-boot.version>3.0.6</spring-boot.version>-->
         <curator-framework.version>4.3.0</curator-framework.version>
         <curator-recipes.version>4.3.0</curator-recipes.version>
         <curator-client.version>4.3.0</curator-client.version>
@@ -110,6 +111,17 @@
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-client</artifactId>
             <version>${curator-client.version}</version>
+        </dependency>
+        <!-- jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
