--- a/rpc-netty/rpc-netty-common/pom.xml
+++ b/rpc-netty/rpc-netty-common/pom.xml
@@ -20,6 +20,7 @@
         <protobuf.version>3.21.9</protobuf.version>
         <objenesis.version>3.2</objenesis.version>
         <protostuff.version>1.2.2</protostuff.version>
+        <hession.version>4.0.38</hession.version>
     </properties>
 
     <dependencies>
@@ -56,6 +57,13 @@
             <groupId>com.dyuproject.protostuff</groupId>
             <artifactId>protostuff-runtime</artifactId>
             <version>${protostuff.version}</version>
+        </dependency>
+
+        <!--hessian-->
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>${hession.version}</version>
         </dependency>
     </dependencies>
 </project>
